[package]
name = "chaos-discord-bot"
version = "0.1.0"
authors = ["Fulcrum"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "temp_cache",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

rand = "0.8.5"
# rusqlite = { version = "0.28.0"} #, features = ["bundled"] }
